--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "next": "14.2.30",
