--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+# Base URL
+BASE_URL=http://localhost:3000
 # MongoDB
 MONGO_CONNECTION_STRING=mongodb+srv://mis12122038brur:bHYEN0FtiCtcnZvq@cluster0.amfwggv.mongodb.net/farm-fresh
 # Auth JS 
