--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.10.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
-    "mongodb": "^6.18.0",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.17.1",
     "next": "14.2.30",
     "next-auth": "^5.0.0-beta.29",
