--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@types/node": "^20",
