complete order invoice pdf send

--- a/.env
+++ b/.env
@@ -11,3 +11,9 @@ GOOGLE_CLIENT_SECRET=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
 CLOUDINARY_CLOUD_NAME=dxdcdmsy7
 CLOUDINARY_API_KEY=689577416482131
 CLOUDINARY_API_SECRET=GOAyNA58VCw9UyVOl40vu1G1Euc
+#SMTP Variable
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=mis12122038brur@gmail.com
+SMTP_PASS=xktq ohrg abvr xsdc
+MAIL_FROM="no-replay@farmfresh.com"
