--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.10.0",
+    "@react-pdf/renderer": "^4.3.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "mongodb": "^6.19.0",
@@ -17,6 +18,7 @@
     "next": "14.2.30",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.9",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
