--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.10.0",
+    "@auth/mongodb-adapter": "^3.11.0",
     "@react-pdf/renderer": "^4.3.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
-    "mongodb": "^6.19.0",
+    "mongodb": "^6.20.0",
     "mongoose": "^8.17.1",
     "next": "14.2.30",
     "next-auth": "^5.0.0-beta.29",
@@ -22,8 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5",
-    "swr": "^2.3.6"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -35,9 +34,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "resolutions": {
-    "@auth/core": "^0.27.0"
   },
   "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
 }
